# veeva-python

./: .gitignore  .travis.yml  API_IMPLEMENTATION_CHECKLIST.md  README.md  pyproject.toml  tox.ini
.github/workflows/: python.yml
docs/: MergeRequest.md  VeevaApi.md
docs/source/: conf.py  index.rst  modules.rst
src/veeva/: __init__.py  api_client.py  api_response.py  client.py  configuration.py  exceptions.py  rest.py
src/veeva/api/: __init__.py  veeva_api.py
src/veeva/models/: __init__.py  auth_discovery_request.py  merge_request.py  vobjects_object_name_actions_merge_post_request_inner.py
test/: test_veeva_api.py
tests/: test_client.py  test_merge_request.py
