[tool.poetry]
name = "openapi-client"
version = "1.0.0"
description = "Veeva Vault API v25.1"
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "Veeva Vault API v25.1"]
packages = [{include = "openapi_client"}]

[tool.poetry.dependencies]
python = ">=3.7"
python-dateutil = ">=2.5.3"
urllib3 = ">=1.25.3, <3.0.0"
pydantic = ">=1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.1.3"
pytest-cov = ">=2.8.1"
pytest-randomly = ">=3.12.0"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
