[tool.poetry]
name = "veeva-vault-sdk"
version = "0.1.0"
description = "A Python SDK for the Veeva Vault API."
authors = ["Veeva Vault API Team <team@example.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Veeva", "Veeva Vault", "API", "SDK"]
packages = [
    { include = "veeva", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = ">=1.25.3, <3.0.0"
python-dateutil = ">=2.8.2"
pydantic = ">=1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
pytest-cov = ">=2.8.1"
pytest-randomly = ">=3.12.0"
tox = ">=3.9.0"
flake8 = ">=4.0.0"
build = "^0.10.0"

[tool.poetry.group.dev.dependencies]
sphinx = "<8"
myst-parser = "2.0.0"
sphinx-autodoc-typehints = "<2"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
